# test_mcp_servers

./: .dockerignore  .gitignore  AUTH_IMPLEMENTATION.md  CHANGELOG.md  CICD_SUMMARY.md  CRITIQUES.md  Cargo.toml  Dockerfile  README.md  WORK.md  WORK_COMP.md  WORK_TRACKER.md  changelog.toml  clippy.toml  justfile  release-plz.toml
.github/: CICD.md  QUICKSTART.md  SECRETS.md  dependabot.yml
.github/scripts/: verify-ci.sh
.github/workflows/: ci.yml  release-plz.yml  release.yml
docs/: CICD_SUMMARY.md  IMPROVEMENTS.md
src/: auth.rs  config.rs  error.rs  icons.rs  lib.rs  main.rs  oauth.rs  server.rs
src/prompts/: mod.rs  templates.rs
src/resources/: dynamic_resources.rs  mod.rs  static_resources.rs
src/tools/: encoding.rs  math.rs  mod.rs  string.rs  testing.rs  ui.rs  utility.rs
tests/: auth_test.rs  lifecycle_test.rs  prompts_test.rs  protocol_compliance_test.rs  resources_test.rs  tools_test.rs
tests/common/: mod.rs
ui_templates/: button.html  card.html  dashboard.html  data_table.html  form.html  internal_only.html  mcp-app-shim.js  pipeline.html
