[package]
name = "mcp-test-server"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "A full-featured MCP test server for integration testing"
repository = "https://github.com/nazq/test_mcp_servers"
keywords = ["mcp", "model-context-protocol", "testing", "server"]
categories = ["development-tools::testing", "web-programming"]
readme = "README.md"

[dependencies]
# MCP Server SDK
# Note: SSE transport is deprecated in 0.10 and removed in 0.11
# We've pre-emptively removed SSE support for forward compatibility
rmcp = { version = "0.11", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
] }

# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
subtle = "2.6"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
